--- a/taccsite_cms/static/site_cms/css/src/_imports/tools/x-news.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/tools/x-news.css
@@ -274,10 +274,7 @@
 /* To make media clickable via a "read more" link */
 @define-mixin news-feed-article__link-overlay {
   /* To cover the image exactly */
-  display: grid;
-  grid-row-start: 1;
-  grid-column-start: 1;
-  grid-row-end: span 2;
+  grid-area: media;
 
   /* To hide link text */
   font-size: 0;
@@ -374,6 +371,11 @@
   }
   @media (--medium-and-above) {
     @mixin news-article-page__media--wide-context;
+  }
+
+  /* To not show empty block (which might have margin) */
+  &:empty {
+    display: none;
   }
 }
 @define-mixin news-article-page__media--slim-context {
